--- a/performance/demo/Makefile
+++ b/performance/demo/Makefile
@@ -1,9 +1,25 @@
+Q ?= 1200
+
 run:
-	go run app/main.go -q 600
+	go run app/main.go -q $Q
+
+setup:
+	docker-compose up
 
 load:
-	for i in 1 .. 700000; do curl -d '{ "type": "message_type", "payload": { "message": "hi" } }' -H "Content-Type: application/json" -X POST http://localhost:8000; done
-	# ab -l -p post.json -T application/json -n 30000 -c 5 http://localhost:8000/
+	while sleep 1; do \
+		curl -d '{ "type": "message_type", "payload": { "message": "hi" } }' -H "Content-Type: application/json" -X POST http://localhost:8000; \
+	done
+
+consume:
+	go run consumer/main.go -q $Q
 
 pprof:
-	go tool pprof http://localhost:8000/debug/pprof/heap
+	go build -o bin app/main.go
+	./bin -q $Q -cpuprofile profile.cpu
+
+pprof-top:
+	pprof -top bin profile.cpu
+
+pprof-web:
+	pprof -http=localhost:8888 bin profile.cpu
